# lary

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
.github/workflows/: docker-image.yml
migrations/: 20240604173622_init.sql
src/: app_error.rs  fily.rs  hyper.rs  logy.rs  main.rs  middleware.rs  tracky.rs
src/fily/: create_bucket.rs  create_general_bucket.rs  delete_bucket.rs  delete_object.rs  error_response.rs  get_object.rs  list_buckets.rs  put_object.rs  s3_app_error.rs  search_bucket.rs
