[package]
name = "loggy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["trace"] }
chrono = "0.4.38"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = [
    "net",
    "macros",
    "rt-multi-thread",
    "fs",
    "tracing",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.59"
anyhow = "1.0.82"
