[package]
name = "loggy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
axum = { version = "0.7.5", features = ["macros", "http2"] }
tower-http = { version = "0.5.2", features = ["trace"] }
chrono = "0.4.38"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = [
    "net",
    "macros",
    "rt-multi-thread",
    "fs",
    "tracing",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.59"
anyhow = "1.0.82"
redis = { version = "0.25.4", features = [
    "aio",
    "streams",
    "tokio-comp",
    "serde",
    "serde_json",
    "json",
] }
serde-redis = "0.13.0"
sqlx = { version = "0.7.4", features = [
    "sqlite",
    "chrono",
    "uuid",
    "runtime-tokio",
] }
uuid = { version = "1.8.0", features = ["v4"] }
tower = "0.4.13"
future-utils = "0.12.1"
dotenv = "0.15.0"
http-body-util = "0.1.1"
bytes = "1.6.0"
